added grid-docker.xml file to test using grid on docker